--- a/Dalamud.Updater/packages.config
+++ b/Dalamud.Updater/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autoupdater.NET.Official" version="1.7.0" targetFramework="net48" />
-  <package id="ILMerge" version="3.0.41" targetFramework="net48" />
-  <package id="MSBuild.ILMerge.Task" version="2.0.0-pre501" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net47" />
+  <package id="Autoupdater.NET.Official" version="1.7.4" targetFramework="net48" />
+  <package id="ILMerge" version="3.0.40" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1293.44" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Serilog" version="2.11.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Async" version="1.5.0" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net48" />
