--- a/Dalamud.Updater/Dalamud.Updater.csproj
+++ b/Dalamud.Updater/Dalamud.Updater.csproj
@@ -111,6 +111,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\DirectoryController.cs" />
+    <Compile Include="Controller\FileHandler.cs" />
+    <Compile Include="Controller\JsonPropertyHandler.cs" />
     <Compile Include="DalamudLoadingOverlay.cs" />
     <Compile Include="Dalamud\AssetManager.cs" />
     <Compile Include="Dalamud\DalamudConsoleOutput.cs" />
@@ -128,6 +131,7 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="HttpClientWithProgress.cs" />
+    <Compile Include="Model\AssemVersionJsonProperty.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemHelper.cs" />
